apt-listchanges (2.85.14) UNRELEASED; urgency=medium

  * Acknowledge NMU; thanks to Ben Hutchings for it; Closes: #718770, #733921,
    #742826
  * Force quite mode when not running in a TTY; thanks to Micah Anderson for the
    report and to Thomas Parmelan for the patch; Closes: #610012
  * Bump debhelper compat to 9
  * Use dpkg-parsechangelog --show-field

 -- Sandro Tosi <morph@debian.org>  Sat, 06 Jun 2015 18:30:58 -0400

apt-listchanges (2.85.13+nmu1) unstable; urgency=medium

  [ Ben Hutchings ]
  * Non-maintainer upload

  [ Chris Boot ]
  * Use the package's Architecture field when looking for binNMU changelogs.
    This removes the use of dpkg-architecture and thus the dependency on
    dpkg-dev. Closes: #718770, #733921

  [ Sergey Alyoshin ]
  * Add .glade file to translation and use xgettext
  * Mark message as translatable in .glade file
  * Update Russian translation; Closes: #742826

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 12 Oct 2014 23:46:51 +0100

apt-listchanges (2.85.13) unstable; urgency=low

  * Add missing dep on dpkg-dev, required to run dpkg-architecture; thanks to
    Ben Armstrong for the report; Closes: #733825
  * Fixed grammar in debconf Italian text; thanks to Riccardo Boninsegna for the
    report and to Luca Monducci for the patch; Closes: #709222

 -- Sandro Tosi <morph@debian.org>  Wed, 01 Jan 2014 15:59:35 +0100

apt-listchanges (2.85.12) unstable; urgency=low

  * Update the program Spanish PO file; thanks to Javier Fernandez-Sanguino;
    Closes: #686426
  * Handle new format of binNMUs; thanks to Thorsten Glaser for the report and
    to Simon Ruderich for the patch; Closes: #718770
  * Add missing newline in the debconf passtrough frontend output; thanks to
    José Manuel Santamaría Lema for the report and patch; Closes: #693805
  * bump Standards-Version to 3.9.5 (no changes needed)
  * Use Alioth canonical URLs

 -- Sandro Tosi <morph@debian.org>  Sun, 29 Dec 2013 13:31:26 +0100
